--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.59.0",
+    "class-variance-authority": "^0.7.0",
+    "client": "file:",
+    "clsx": "^2.1.1",
+    "genversion": "^3.2.0",
+    "lucide-react": "^0.451.0",
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.59.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -22,6 +30,7 @@
     "eslint-config-next": "14.2.14",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
 }
