--- a/compose.yaml
+++ b/compose.yaml
@@ -1,15 +1,24 @@
 services:
   client:
-    build:
-      context: ./client
+    build: ./client
     container_name: client
     restart: unless-stopped
     networks:
       - app
+    develop:
+      watch:
+        - action: sync
+          path: ./client
+          target: /app
+          ignore:
+            - ./client/node_modules/
+        - action: rebuild
+          path: ./client/package.json
+    env_file:
+      - ./client/.env.local
 
   server:
-    build:
-      context: ./server
+    build: ./server
     container_name: server
     restart: unless-stopped
     networks:
@@ -17,6 +26,10 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    develop:
+      watch:
+        - path: ./server
+          action: rebuild
 
   db:
     image: postgres
@@ -40,6 +53,23 @@ services:
     networks:
       - app
 
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@pgadmin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_LISTEN_PORT: 80
+    ports:
+      - 15432:80
+    volumes:
+      - pgadmin:/var/lib/pgadmin
+    depends_on:
+      - db
+    networks:
+      - app
+    restart: unless-stopped
+
   nginx:
     build: ./nginx
     container_name: nginx
@@ -48,13 +78,18 @@ services:
       - 80:80
     restart: unless-stopped
     depends_on:
-      - client
       - server
     networks:
       - app
+    develop:
+      watch:
+        - action: sync+restart
+          path: ./nginx
+          target: /etc/nginx/conf.d
 
 volumes:
   db-data:
+  pgadmin:
 
 secrets:
   db-password:
