more init stuff

--- a/compose.yaml
+++ b/compose.yaml
@@ -3,6 +3,8 @@ services:
     build: ./client
     container_name: client
     restart: unless-stopped
+    depends_on:
+      - server
     networks:
       - app
     develop:
@@ -21,6 +23,10 @@ services:
     build: ./server
     container_name: server
     restart: unless-stopped
+    secrets:
+      - db-passfile
+    environment:
+      - POSTGRES_PASSWORD_FILE=/run/secrets/db-passfile
     networks:
       - app
     depends_on:
@@ -78,7 +84,7 @@ services:
       - 80:80
     restart: unless-stopped
     depends_on:
-      - server
+      - client
     networks:
       - app
     develop:
@@ -94,6 +100,8 @@ volumes:
 secrets:
   db-password:
     file: db/password.txt
+  db-passfile:
+    file: db/.pgpass
 
 networks:
   app:
