--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -18,6 +18,20 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Route Swagger requests to the Web API service but only allow local access
+    location /swagger {
+        allow 127.0.0.1;          # Allow access from localhost
+        allow ::1;                 # Allow access from localhost (IPv6)
+        allow 172.16.0.0/12;       # Allow access from Docker internal network (optional)
+        deny all;                  # Deny all other access
+
+        proxy_pass http://server/swagger;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # Serve the Next.js frontend
     location / {
         proxy_pass http://client/;
