--- a/server/appsettings.Development.json
+++ b/server/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+	"ConnectionStrings": {
+		"WebApiDatabase": "Host=db; Port=5432; Database=postgres; Username=postgres; Passfile=./../run/secrets/db-passfile"
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	}
 }
