--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"ConnectionStrings": {
+		"WebApiDatabase": "Host=db; Port=5432; Database=postgres; Username=postgres; Passfile=./../run/secrets/db-passfile"
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	},
+	"AllowedHosts": "*"
 }
