--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,9 @@
 services:
   client:
-    build: ./client
+    build:
+      context: ./client
+      args:
+        - no_cache=true
     container_name: client
     restart: unless-stopped
     depends_on:
@@ -62,10 +65,12 @@ services:
   pgadmin:
     container_name: pgadmin
     image: dpage/pgadmin4
+    secrets:
+      - pgadmin-password
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@pgadmin.com
-      PGADMIN_DEFAULT_PASSWORD: admin
-      PGADMIN_LISTEN_PORT: 80
+      - PGADMIN_DEFAULT_EMAIL=admin@pgadmin.com
+      - PGADMIN_DEFAULT_PASSWORD_FILE=/run/secrets/pgadmin-password
+      - PGADMIN_LISTEN_PORT=80
     ports:
       - 15432:80
     volumes:
@@ -102,6 +107,8 @@ secrets:
     file: db/password.txt
   db-passfile:
     file: db/.pgpass
+  pgadmin-password:
+    file: db/pg-admin-password.txt
 
 networks:
   app:
